--- a/Angry Birds Clone/Angry Birds Clone/Angry Birds Clone.vcxproj.filters
+++ b/Angry Birds Clone/Angry Birds Clone/Angry Birds Clone.vcxproj.filters
@@ -24,12 +24,24 @@
     <ClCompile Include="PhysicalBody.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Bird.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GraphicalBody.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PhysicalBody.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Bird.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GraphicalBody.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
