--- a/Angry Birds Clone/Angry Birds Clone/Angry Birds Clone.vcxproj
+++ b/Angry Birds Clone/Angry Birds Clone/Angry Birds Clone.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="Level.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MainMenu.cpp" />
     <ClCompile Include="MyContactListener.cpp" />
     <ClCompile Include="PhysicalBody.cpp" />
     <ClCompile Include="Slingshot.cpp" />
@@ -173,6 +174,7 @@
     <ClInclude Include="GraphicalBody.h" />
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="Level.h" />
+    <ClInclude Include="MainMenu.h" />
     <ClInclude Include="MyContactListener.h" />
     <ClInclude Include="PhysicalBody.h" />
     <ClInclude Include="Slingshot.h" />
