--- a/Angry Birds Clone/Angry Birds Clone/Angry Birds Clone.vcxproj.filters
+++ b/Angry Birds Clone/Angry Birds Clone/Angry Birds Clone.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="MyContactListener.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MainMenu.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -93,6 +96,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="UserData.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MainMenu.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
